# HDRComposer

./: .cproject  .project  CMakeLists.txt
Code/: CMakeLists.txt
Code/Libs/: CMakeLists.txt
Code/Libs/HDRLoader/: CMakeLists.txt  stdafx.h  tpConfig.h  tpDisplayManager.cpp  tpDisplayManager.h  tpDynamicToneMappingManager.cpp  tpDynamicToneMappingManager.h  tpException.cpp  tpException.hpp  tpHDROperations.cpp  tpHDROperations.h  tpHDRToneOperatorAshikhmin.cpp  tpHDRToneOperatorAshikhmin.h  tpHDRToneOperatorChiu.cpp  tpHDRToneOperatorChiu.h  tpHDRToneOperatorDrago.cpp  tpHDRToneOperatorDurand.cpp  tpHDRToneOperatorExp.cpp  tpHDRToneOperatorFilmic.cpp  tpHDRToneOperatorFilmic.h  tpHDRToneOperatorFilmicDynamic.cpp  tpHDRToneOperatorFilmicDynamic.h  tpHDRToneOperatorHistogramme.cpp  tpHDRToneOperatorHistogramme.h  tpHDRToneOperatorLinear.cpp  tpHDRToneOperatorLog.cpp  tpHDRToneOperatorLumAbstract.cpp  tpHDRToneOperatorLumAbstract.h  tpHDRToneOperatorPhotographic.cpp  tpHDRToneOperatorPhotographic.h  tpHDRToneOperatorPhotographicBurn.cpp  tpHDRToneOperatorPhotographicBurn.h  tpHDRToneOperatorPhotographicLocal.cpp  tpHDRToneOperatorPhotographicLocal.h  tpHDRToneOperatorRetinex.cpp  tpHDRToneOperatorSchlick.cpp  tpHDRToneOperatorSigmoid.cpp  tpHDRToneOperatorTumblin.cpp  tpHDRToneOperatorWard.cpp  tpImage.cpp  (+21 more)
Code/Libs/HDRLoader/Managers/: tpDisplayManager.cpp  tpDynamicToneMappingManager.cpp  tpDynamicToneMappingManager.h
Code/Libs/HDRLoader/Operations/: tpHDROperations.cpp  tpHDROperations.h  tpImageConvert.cpp  tpImageConvert.hpp  tpImageFilter.cpp  tpImageFilter.hpp  tpImageThreshold.cpp  tpImageThreshold.hpp  tpOperations.cpp  tpOperatorCropping.cpp
Code/Libs/HDRLoader/ToneOperators/: tpHDRToneOperatorAshikhmin.cpp  tpHDRToneOperatorAshikhmin.h  tpHDRToneOperatorChiu.cpp  tpHDRToneOperatorDrago.cpp  tpHDRToneOperatorDrago.h  tpHDRToneOperatorDurand.h  tpHDRToneOperatorDurandFast.cpp  tpHDRToneOperatorDurandFast.h  tpHDRToneOperatorDurandSlow.cpp  tpHDRToneOperatorDurandSlow.h  tpHDRToneOperatorExp.cpp  tpHDRToneOperatorExp.h  tpHDRToneOperatorFilmic.cpp  tpHDRToneOperatorFilmicDynamic.cpp  tpHDRToneOperatorHistogramme.cpp  tpHDRToneOperatorLinear.cpp  tpHDRToneOperatorLinear.h  tpHDRToneOperatorLog.cpp  tpHDRToneOperatorLog.h  tpHDRToneOperatorLumAbstract.cpp  tpHDRToneOperatorLumAbstract.h  tpHDRToneOperatorPhotographic.cpp  tpHDRToneOperatorPhotographicBurn.cpp  tpHDRToneOperatorPhotographicLocal.cpp  tpHDRToneOperatorPhotographicLocal.h  tpHDRToneOperatorRetinex.cpp  tpHDRToneOperatorRetinex.h  tpHDRToneOperatorSchlick.cpp  tpHDRToneOperatorSchlick.h  tpHDRToneOperatorSigmoid.cpp  tpHDRToneOperatorSigmoid.h  tpHDRToneOperatorTumblin.cpp  tpHDRToneOperatorTumblin.h  tpHDRToneOperatorWard.cpp  tpHDRToneOperatorWard.h  tpToneOperatorAbstract.cpp  tpToneOperatorAbstract.h
Code/Libs/HDRLoader/Tools/: tpPerformances.cpp  tpPerformances.hpp  tpReadOption.cpp  tpToneOperatorGroup.cpp  tpToneOperatorGroup.h
Code/Projects/: CMakeLists.txt
Code/Projects/HDRComposer/: CMakeLists.txt  QChooseOperator.cpp  QChooseOperator.h  QControlPanel.cpp  QControlPanel.h  QDisplayConfig.cpp  QDisplayConfig.h  QDisplayConfig.ui  QDynamicConfig.cpp  QDynamicConfig.h  QDynamicConfig.ui  QFenetrePrincipale.cpp  QFenetrePrincipale.h  QImageLabel.cpp  QImageLabel.h  QToneOperator.cpp  QToneOperator.h  QToneOperatorAbstract.cpp  QToneOperatorAbstract.h  QToneOperatorAshikm.cpp  QToneOperatorAshikm.h  QToneOperatorChui.cpp  QToneOperatorChui.h  QToneOperatorDrago.cpp  QToneOperatorDrago.h  QToneOperatorExp.cpp  QToneOperatorExp.h  QToneOperatorFormAbstract.cpp  QToneOperatorFormAbstract.h  QToneOperatorLog.cpp  QToneOperatorLog.h  QToneOperatorPhotographic.cpp  QToneOperatorPhotographic.h  QToneOperatorPhotographicBurn.cpp  QToneOperatorPhotographicBurn.h  QToneOperatorPhotographicLocal.cpp  QToneOperatorPhotographicLocal.h  QToneOperatorRetinex.cpp  QToneOperatorRetinex.h  QToneOperatorSchilck.cpp  (+12 more)
Code/Projects/HDRComposer/ToneOperators/: QToneOperator.h  QToneOperatorAbstract.cpp  QToneOperatorAbstract.h  QToneOperatorAshikm.h  QToneOperatorChui.h  QToneOperatorDrago.cpp  QToneOperatorDrago.h  QToneOperatorDurandFast.cpp  QToneOperatorDurandFast.h  QToneOperatorDurandSlow.cpp  QToneOperatorDurandSlow.h  QToneOperatorExp.h  QToneOperatorFormAbstract.h  QToneOperatorLog.h  QToneOperatorPhotographic.cpp  QToneOperatorPhotographic.h  QToneOperatorPhotographicBurn.cpp  QToneOperatorPhotographicBurn.h  QToneOperatorPhotographicLocal.cpp  QToneOperatorPhotographicLocal.h  QToneOperatorRetinex.cpp  QToneOperatorRetinex.h  QToneOperatorSchilck.h  QToneOperatorTumblin.cpp  QToneOperatorTumblin.h
Code/Tests/: CMakeLists.txt
Code/Tests/HDRLoaderTest/: CMakeLists.txt  HDRLoaderTest.cpp
Config/CMake/: FindFFTW3.cmake  FindFreeImage.cmake
Scripts/: make.py  make2.py
