SET(HDRLoaderTest_SRCS
	HDRLoaderTest.cpp
)


INCLUDE_DIRECTORIES(
	${CMAKE_CURRENT_SOURCE_DIR}
	../../Libs/HDRLoader
)

ADD_EXECUTABLE(HDRLoaderTest ${HDRLoaderTest_SRCS})

target_link_libraries(
  HDRLoaderTest
  HDRLoader
)

SET_TARGET_PROPERTIES(HDRLoaderTest PROPERTIES
  INSTALL_RPATH ${PROJECT_BUILD_PATH}
  INSTALL_RPATH_USE_LINK_PATH true
)

install(TARGETS HDRLoaderTest RUNTIME DESTINATION ${PROJECT_BUILD_PATH})